tests/paczka2/big_fuzzy/30415588.err
Error in line 11: iBh4 S612 7,3
Error in line 12: iBh4 A493 73,9
Error in line 15: R3DwQmoHdY A493 52,9
Error in line 22: iBh4 S969 2 , 
Error in line 16: iBh4 S612 67,0
Error in line 23: iBh4 S969 98,3
Error in line 34: R3DwQmoHdY A372 65,13
Error in line 43: iBh4 S969 -2,0
Error in line 35: R3DwQmoHdY A372 185,5
Error in line 32: 0UG A493 80,9
Error in line 54: 0UG A372 51,5
Error in line 69: R3DwQmoHdY A372 74,9
Error in line 71: 0UG A372 64,0
Error in line 79: 0UG S612 32,6
Error in line 84: R3DwQmoHdY A372 34,9
Error in line 88: LZhOiZemNRW A372 85,6
Error in line 42: iBh4 S969 39,3
Error in line 96: X2VT A372 66,7
Error in line 95: iBh4 S612 74,8
Error in line 104: S969 A372 353,75
Error in line 102: S969 A372 71,7
Error in line 106: S969 S969 45,7
Error in line 111: S969 A372 67,9
Error in line 116: 0UG S969 41,0
Error in line 117: 0UG A493 45,4
Error in line 131: LZhOiZemNRW A493 47,9
Error in line 127: rmTWk4w A493 13,6
Error in line 145: X2VT S612 47,7
Error in line 148: 0UG A372 34,8
Error in line 160: S969 S612 22,7
Error in line 168: iBh4 A372 111,5
Error in line 181: iBh4 A493 0,9
Error in line 188: LZhOiZemNRW A493 -1,5
Error in line 186: X2VT S969 71,9
Error in line 194: X2VT A372 9,2
Error in line 198: 0UG S969 34,6
Error in line 217: rmTWk4w S612 74,9
Error in line 189: iBh4 A493 97,3
Error in line 216: X2VT A493 66,9
Error in line 237: iBh4 S969 59,3
Error in line 239: R3DwQmoHdY S612 72,4
Error in line 243: iBh4 A372 24,7
